# molabel

./: .gitignore  Makefile  README.md  bulk.py  demo.ipynb  demo.py  pyproject.toml
data/: subset.csv  tweets.csv
docs/: index.html
docs/assets/: ConnectedDataExplorerComponent-Cd8OePNL.js  ImageComparisonComponent-BaounMqb.js  VegaLite-BThNu01F.js  _baseEach-AMF-7d2J.js  _baseMap-CtLb1-E9.js  _baseUniq-DmGC0EvQ.js  _createAggregator-nAviCUEI.js  any-language-editor-BwrzhW9s.js  architectureDiagram-IEHRJDOE-DELkI6j7.js  blockDiagram-JOT3LUYC-D5tDE05w.js  c4Diagram-VJAJSXHY-D2EVIFPE.js  channel-Bsq91aIP.js  chunk-4BMEZGHF-CADZZMGY.js  chunk-A2AXSNBT-CfEZbXlN.js  chunk-AEK57VVT-BQlr57ae.js  chunk-D6G4REZN-CcnlvIsn.js  chunk-RZ5BOZE2-BQ7pJY-M.js  chunk-XZIHB7SX-BuiqX9Aw.js  circle-play-Bxr4QwIa.js  classDiagram-GIVACNV2-uoJGO3VQ.js  clone-Yb_iboYC.js  compile-D71Q4H3R.js  dagre-OKDRZEBW-DarkVs9y.js  data-editor-rukfgV6c.js  diagram-SSKATNLV-D4OT3ifx.js  diagram-VNBRO52H-BUvUJmDs.js  edit-page-DCGyJssF.js  erDiagram-Q7BY3M3F-DjRQ_etL.js  flowDiagram-4HSFHLVR-CeFuqcbl.js  ganttDiagram-APWFNJXF-ByTTg73J.js  gitGraphDiagram-7IBYFJ6S-DzfS7fCx.js  graph-DNRj_GT8.js  home-page-PkK2rOsj.js  index-9wcEzf6r.js  index-BLEx_XmQ.js  index-BgLoMO85.js  index-C15JFT_c.js  index-C4zeEHGR.js  index-CTa3U4be.js  index-CfDLJuRd.js  (+39 more)
layouts/: bulk.grid.json
src/molabel/: __init__.py  widget.py
src/molabel/static/: widget.css  widget.js
