[project]
name = "molabel"
version = "0.1.1"
description = "A simple annotation widget for labeling examples"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molabel"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/molabel/**/*.py",
    "src/molabel/static/**/*",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88